GetFingerprintsMatches -> GetFingerprintMatches
